fixes layout issue with embargoed item text box

--- a/app/assets/stylesheets/partials/item-page-sidebar.scss
+++ b/app/assets/stylesheets/partials/item-page-sidebar.scss
@@ -40,6 +40,7 @@
     font-size: 12px;
     margin: 0;
     padding: 5px;
+    width: 32%;
   }
 }
 
@@ -138,6 +139,10 @@
 
     & .download-button {
       padding: 8px;
+      width: 100%;
+    }
+
+    & p {
       width: 100%;
     }
   }
